--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@ APP_TIMEZONE=Africa/Lusaka
 APP_URL=http://localhost
 
 PAYMENT_ENVIRONMENT=sandbox
-CGGRATE_USERNAME=cgrate
-CGGRATE_PASSWORD=cgrate
+CGRATE_ENDPOINT=https://543.cgrate.co.zm/Konik/KonikWs
+CGRATE_USERNAME=cgrate
+CGRATE_PASSWORD=cgrate
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
