Add PDF receipt generation and email functionality for transactions
- Integrated PDF generation for transaction receipts using barryvdh/laravel-dompdf.
- Implemented email receipt feature, allowing users to send transaction receipts directly to their email.
- Updated TransactionController to handle receipt downloads and email requests.
- Created new Blade views for transaction receipts and exports.
- Enhanced transaction history view with email receipt modal and improved export options.
- Adjusted routes to include email receipt functionality.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-dom": "*",
         "ext-openssl": "*",
         "ext-zip": "*",
+        "barryvdh/laravel-dompdf": "^3.1",
         "cybersource/rest-client-php": "^0.0.55",
         "filament/filament": "^3.2",
         "filament/notifications": "^3.2",
